--- a/index.html
+++ b/index.html
@@ -15,5 +15,18 @@
             <a href="#">header link three</a>
         </div>
     </div>
+
+    <div class="hero-wrapper">
+        <div class="hero-content">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and 
+            color is lower contrast.
+            </p>
+            <button class="hero-button">Sign up</button>
+        </div>
+        <div class="hero-image">
+            This is a placeholder for an image
+        </div>
+    </div>
 </body>
 </html>
