--- a/index.html
+++ b/index.html
@@ -28,5 +28,34 @@
             This is a placeholder for an image
         </div>
     </div>
+
+    <div class="info-content">
+        <h1>Some random information.</h1>
+        <div class="info-images">
+            <div class="info-image">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-image">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-image">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-image">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+                 or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quote-credit">-Thor, God of Thunder</p>
+        </div>
+    </div>
+
 </body>
 </html>
