--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <div class="header-logo">Header Logo</div>
         <div class="header-links">
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+            <a href="#">Home</a>
+            <a href="#">Products</a>
+            <a href="#">Contact Us</a>
         </div>
     </div>
 
