--- a/index.html
+++ b/index.html
@@ -57,5 +57,11 @@
         </div>
     </div>
 
+    <div class="call-to-action-wrapper">
+        <div class="call-to-action">
+            
+        </div>
+    </div>
+
 </body>
 </html>
