--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
 
     <div class="call-to-action-wrapper">
         <div class="call-to-action">
-            
+            <div class="call-to-action-text">
+                <h1>Call to action! It's time!</h1>
+                <p>Sign up for our product by clicking the button right over there!</p>
+            </div>
+            <div class="call-to-action-button">
+                <button class="sign-up">Sign up</button>
+            </div>
         </div>
     </div>
 
