--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="hero-button">Sign up</button>
         </div>
         <div class="hero-image">
-            This is a placeholder for an image
+            <img src="./images/image.jpg">
         </div>
     </div>
 
